styles.css
:root {
    --text-color: #ffffff;
    --background-color: black;
    --nav-bar-size: 4rem;
    --line-break-color: #eeeff12b;
    font-size: 17px;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
    scroll-padding-top: var(--nav-bar-size); 
}

::-webkit-scrollbar {
    height: 0.4rem;
    width: 0.4rem;
    background-color: #1f03104c;
}

::-webkit-scrollbar-thumb {
    background-color: rgb(122, 12, 41);
    border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
    background-color: rgb(168, 22, 56);
}

body {
    background-color: var(--background-color);
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    padding-top: var(--nav-bar-size);
}

#particles-js {
    position: fixed;
    height: 100%;
    width: 100%;
    border: 0px;
    z-index: -100;
}


a {
    color: var(--text-color);
    text-decoration: none;
}

nav.desktop {
    display: flex;
    justify-content: space-between;
    padding: 0 0 0 2rem;
    height: var(--nav-bar-size);
    align-items: center;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 5;
    border-bottom: 0.1rem solid #ffffff9c;
    background-color: rgba(0, 0, 0, 0.879);
    backdrop-filter: blur(10px);
}

nav.mobile {
    display: none;
    transform: translateY(-100%);
}

/* Logo styling */

nav.desktop .logo {
    height: 55%;
}

nav.desktop .logo a {
    height: 100%;
    color: var(--text-color);
    font-size: 1.5rem;
    font-weight: 600;
}

nav.desktop .logo a svg {
    height: 100%;
    aspect-ratio: 40/48;
}


/* Nav links styling */


nav.desktop .links {
    height: 100%;
    display: flex;
    align-items: center;
    padding-right: 2rem;
}

nav.desktop .links a {
    text-transform: capitalize;
    /* top: 0.2rem; */
    color: var(--text-color);
    font-size: 1rem;
    font-weight: 600;
    height: 40%;
    margin: 0 0.625rem;
    position: relative;
}

nav.desktop .links a .link-underline {
    opacity: 0;
    display: block;
    height: 3px;
    width: 100%;
    background-color: var(--text-color);
    bottom: 0;
    left: 0;
    transform: translateY(-100%);
    position: absolute;
    border-radius: 2px;
    transition: opacity 0.3s ease-in-out;
}

nav.desktop .links a:hover > .link-underline {
    opacity: 1;
}

nav.desktop .links a .link-glow {
    opacity: 0;
    display: block;
    height: 100%;
    width: 100%;
    background-color: var(--text-color);
    bottom: 0;
    left: 0;
    position: absolute;
    border-radius: 100% 100% 0 0;
    transition: opacity 0.3s ease-in-out;
    filter: blur(15px);
}

nav.desktop .links a:hover > .link-glow {
    opacity: 0.5;
}


nav.desktop .hamburg {
    display: none;
}



section {
    color: var(--text-color);
    padding: 3rem 2rem;
    height: calc(100vh - var(--nav-bar-size)); /* Reduce the default minimum height */
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
    border-bottom: 2px solid var(--line-break-color);
}

section h1 {
    text-shadow: 0 0 30px #ff49e1bb;
    font-size: 2.75rem;
    font-weight: 700;
}


#about #pfp {
    aspect-ratio: 1;
    border-radius: 50%;
    margin: 3rem auto;
    overflow: hidden;
    box-shadow: 0 0 55px rgba(255, 7, 57, 0.247);
    border: 2px solid rgba(255, 7, 57, 0.176);
}

#about #pfp img {
    height: 100%;
    width: 100%;
}

#about #bio p {
    text-shadow: 0 0 30px #ff00ee;
    font-size: 1.2rem;
    margin: 0.5rem;
    padding: 0 2rem;
}



#projects .projects-subsection {
    height: 25rem;
    width: 100%;
    margin-top: 5rem;
    border-top: 2px solid rgba(255, 255, 255, 0.8);
    border-bottom: 2px solid rgba(255, 255, 255, 0.8);
    display: flex;
    position: relative;
}

#projects .projects-subsection .items-container {
    display: flex;
    justify-content: center;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

#projects .projects-subsection .items-container .project-items {
    display: flex;
    width: fit-content;
    height: 100%;
    overflow-x: scroll;
}


#projects .projects-subsection .projects-glowtop {
    position: absolute;
    height: 2rem;
    width: 100%;
    top: -2px;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    transform: translateY(-100%);
}

#projects .projects-subsection .projects-glowtop .glow {
    width: calc(100% - 1rem);
    height: 100%;
    transform: translateY(100%);
    bottom: 0;
    left: 0;
    background-color: #ff499e9d;
    filter: blur(0.5rem);
}

#projects .projects-subsection .projects-glowbottom {
    position: absolute;
    height: 2rem;
    width: 100%;
    bottom: -2px;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    transform: translateY(100%);
}

#projects .projects-subsection .projects-glowbottom .glow {
    width: calc(100% - 1rem);
    height: 100%;
    transform: translateY(-100%);
    bottom: 0;
    left: 0;
    background-color: #ff499e9d;
    filter: blur(0.5rem);
}

#projects .projects-subsection .items-container .project-items .project-item {
    height: 100%;
    aspect-ratio: 2.7/4;
    padding: 1.5rem 0.8rem;
}

#projects .projects-subsection .items-container .project-items .project-item a {
    display: block;
    height: 100%;
    width: 100%;
    aspect-ratio: 9/16;
    border: 2px solid white;
    border-radius: 0.5rem;
    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.6);
    transition: box-shadow 0.2s ease-in, transform 0.2s ease-in;

    position: relative;
}

#projects .projects-subsection .items-container .project-items .project-item a:hover {
    box-shadow: 0 5px 20px rgba(200, 0, 157, 0.6);
    transform: scale(102%);
}

#projects .projects-subsection .items-container .project-items .project-item a .project-content {
    height: 100%;
    display: flex;
    flex-direction: column;
    padding: 1rem;
    overflow: hidden;
}
/* ... */

